# cryptographic-memory

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-python.yml  release-rust.yml  release.yml
docs/: accuracy_and_hallucination.md  api_documentation.md  cryptographic_memory.md  framework_integrations.md  hermes_integration.md  implementation_plan.md  low_spec_hardware.md  packaging_and_release.md  research_overview.md
python/: README.md  pyproject.toml
python/cryptomem/: __init__.py  cli.py  client.py  config.py  models.py
python/cryptomem/adapters/: __init__.py  base.py  mock_adapter.py  ollama_adapter.py
python/cryptomem/crypto/: __init__.py  hashing.py  keys.py  merkle.py  signer.py
python/cryptomem/efficiency/: __init__.py  budgeter.py  cache.py  compressor.py  deduper.py
python/cryptomem/embeddings/: __init__.py  base.py  minilm.py  stub.py
python/cryptomem/proactive/: __init__.py  extractor.py  planner.py  triggers.py  writeback.py
python/cryptomem/retrieval/: __init__.py  retriever.py
python/cryptomem/server/: __init__.py  app.py
python/cryptomem/store/: __init__.py  base.py  neo4j_store.py  remote_store.py  sqlite_store.py
python/cryptomem/verification/: __init__.py  citations.py  cove.py  entropy.py  faithfulness.py  grounding.py
python/examples/: agno_quickstart.py  agno_verified_memory.py
python/examples/database example/: README.md  db_agent.py  server.py
python/examples/database example/static/: app.js  index.html  styles.css
python/examples/detailed example/: memory_agent.py  server.py
python/examples/detailed example/static/: app.js  index.html  styles.css
python/tests/: conftest.py  test_adapters.py  test_crypto.py  test_efficiency.py  test_enterprise.py  test_integration.py  test_neo4j_store.py  test_proactive.py  test_retrieval.py  test_server.py  test_store.py  test_verification.py
rust/: Cargo.toml
rust/cryptomem-rs/: Cargo.toml  README.md
rust/cryptomem-rs/src/: client.rs  crypto.rs  error.rs  lib.rs  models.rs
rust/cryptomem-rs/tests/: crypto_vectors.rs
rust/examples/swarms-verified-memory/: Cargo.toml
rust/examples/swarms-verified-memory/src/: main.rs
