[package]
name = "swarms-verified-memory"
version = "0.1.0"
edition = "2021"
publish = false
description = "Example: verified cryptomem memory as a swarms-rs Tool."

# This example is intentionally excluded from the rust/ workspace (see
# ../../Cargo.toml `exclude`) so it does not pull swarms-rs into CI builds.
# Run it on its own: `cd rust/examples/swarms-verified-memory && cargo run`.

[dependencies]
cryptomem-rs = { path = "../../cryptomem-rs" }
swarms-rs = "0.2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde_json = "1"
